@@ -92,7 +92,7 @@ namespace WoopsiUI {
 		 * Get the selected option.  Returns NULL if nothing is selected.
 		 * @return The selected option.
 		 */
-		virtual inline const ListBoxListDataItem* getSelectedOption() const {
+		virtual inline const ListBoxDataItem* getSelectedOption() const {
 			return _listbox->getSelectedOption();
 		};
 
@@ -109,7 +109,7 @@ namespace WoopsiUI {
 		 * Get the selected index.  Returns -1 if nothing is selected.
 		 * @return The selected index.
 		 */
-		virtual inline const ListBoxListDataItem* getOption(const s32 index) const {
+		virtual inline const ListBoxDataItem* getOption(const s32 index) const {
 			return _listbox->getOption(index);
 		};
 
